$Id: ChangeLog,v 1.173 2005/02/21 00:58:15 hwmaier Exp $

2005-02-21  Henrik Maier  <hwmaier@users.sourceforge.net>

        * conf/arch/arch.nut: Fixed makedefs MCU definition for AT90CAN128

        * conf/dev/dev.nut: New CAN int vectors ivect35.c and ivect36 added,
        removed "makedefs" entry for RTL_IRQ_RISING_EDGE. Wasn't causing
        trouble with nutconf 1.0.4 but it does with the 1.1.2 version.

        * os/thread.c:
        Changed "#if defined(__AVR_ATmega128__) || defined(__AVR_ATmega103__)"
        to a more generic "#if defined(__AVR__)" in order to support
        AT90CAN128, ATMEGA64, and possibly the ATMEGA256 as well.


2005-02-17 Matthias Ringwald <mringwal@.inf.ethz.ch>

	* os/arch/unix_options.c, os/arch/unix_nutinit: added #include <getopt.h>

2005-02-17  Philipp Blum <blum@tik.ee.ethz.ch>, Matthias Ringwald

	* os/thread.c, include/sys/thread.h: Removed volatile declarations of
	runQueue since it is not touched from interrupt context.
	Same for nutThreadList, runningThread and killedThreads.	

	* os/thread.c: As runQueue is not modified by interrupts,
	runningThread == runQueue always. Therefore removed obsolete
	comparison in NutThreadYield().

	* os/thread.c: Removed unnecessary critical section in NutThreadYield.
	Put NutThreadSwitch call of NutThreadResume into critical section.

	* os/event.c: In NutEventWait(), replaced NutThreadRemoveQueue by
	direct removal of first thread in queue.
	
2005-02-16  Harald Kipp  <harald.kipp@egnite.de>

	* os/event.c, os/thread.c, os/timer.c, os/arch/avr_thread.c,
	include/sys/thread.h: Introduced a new queue in the kernel.
	This may currently break any non-AVR port!
	Instead of inserting a woken-up thread to the priority ordered
	queue of ready-to-run threads, it will be added to the new
	simple linked list of threads waiting to become ready.
	This results in a more deterministic execution time of
	NutEventPostFromIrq(), which is running in interrupt context.